# rust_hft

./: .gitignore  Cargo.toml  README.md  build.sh  compile_project.rs  create_archi  create_archi.rs  hello.py  projection.md  pyproject.toml  readme.md  run_main.sh
assets/: HFT_system.md  ML.md  OMS.md  TLB.md  caches_of_interest.md  concepts.md  course_structure.md  huge_page.md  numa.md  numa_mem.md  scheduling_policies.md  shared_memory.md  simd_vect.md  specs.md
crates/analytics_pipeline/: Cargo.toml
crates/analytics_pipeline/src/: analysis_runner.rs  lib.rs  statistics.rs  time_series.rs
crates/benches/: Cargo.toml
crates/benches/src/: latency_bench.rs  lib.rs
crates/common/: readme.md
crates/common/src/: byte_utils.rs  cpu_features.rs  lib.rs
crates/core_pipeline/: Cargo.toml  readme.md
crates/core_pipeline/src/: aggregator.rs  allocators.rs  lib.rs  lock_free_queues.rs  match_engine.rs  order_book.rs  risk_checks.rs  signal_generator.rs  timing.rs
crates/optim_circular_buffer/: Cargo.toml  build.rs  config.json  readme.md  set_memory.py  set_memory.sh
crates/optim_circular_buffer/src/: circular_buffer.rs  config.rs  delta_encoding.rs  header.rs  lib.rs  main.rs  mock_process.rs  numa_support.rs  os_optimization.rs  prefetch.rs  profiling.rs  rdma.rs
crates/protocols/: Cargo.toml
crates/protocols/src/: fix_protocol.rs  lib.rs  parsers.rs  sbe_protocol.rs
crates/reception_layer/: Cargo.toml
crates/reception_layer/src/: lib.rs  message_types.rs  mock_data_gen.rs  network_ingest.rs  protocol_decode.rs
crates/storage_pipeline/: Cargo.toml
crates/storage_pipeline/src/: async_persist.rs  journal.rs  lib.rs  mem_mapped.rs
src/: config.rs  main.rs  os_optimization.rs  runtime.rs  sys_pinning.rs
tests/: integration_tests.rs  performance_tests.rs
